--- a/sys/src/main/AndroidManifest.xml
+++ b/sys/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ime.bbk2kext">
+    package="ime.bbk2keyext">
 
     <application
         android:allowBackup="true"
